Seoul-VPC-HQ.yml
Metadata:
  "AWS::CloudFormation::Interface":
    ParameterGroups:
      - Label:
          default: "VPC Parameters"
        Parameters:
         - AvailabilityZoneA
#        - AvailabilityZoneB
         - VPCCIDRBlock
         - PublicSubnetABlick
#        - PublicSubnetBBlick
         - PrivateSubnetABlock
#        - PrivateSubnetBBlock
         - TGWSubnetABlock
#        - TGWSubnetBBlock
         - InstanceType

################################################################################################
# Create-Parameters : AZ,VPC CIDR Blcok, Public, Private Subnet Block, InstanceType Parameters #
################################################################################################

Parameters:
  AvailabilityZoneA:
    Description: "Choose AZ1 for your VPC."
    Type: AWS::EC2::AvailabilityZone::Name
    Default: "ap-northeast-2a"
#  AvailabilityZoneB:
#    Description: "Choose AZ2 for your VPC."
#    Type: AWS::EC2::AvailabilityZone::Name
#    Default: "ap-northeast-2b"

  VPCCIDRBlock:
    Type: String
    Default: 10.0.0.0/16
    Description: "The CIDR range for the VPC. This should be a valid private (RFC 1918) CIDR range."

  PublicSubnetABlock:
    Type: String
    Default: 10.0.11.0/24
    Description: "CidrBlock for AZ A public subnet A within the VPC"   
#  PublicSubnetBBlock:
#    Type: String
#    Default: 10.0.12.0/24
#    Description: "CidrBlock for AZ B public subnet B within the VPC"
 

  PrivateSubnetABlock:
    Type: String
    Default: 10.0.21.0/24
    Description: "CidrBlock for AZ A private subnet A within the VPC"
#  PrivateSubnetBBlock:
#    Type: String
#    Default: 10.0.22.0/24
#    Description: "CidrBlock for AZ B private subnet B within the VPC"
 
  TGWSubnetABlock:
    Type: String
    Default: 10.0.251.0/24
    Description: "CidrBlock for AZ A TGW subnet A within the VPC"
#  TGWSubnetBBlock:
#    Type: String
#    Default: 10.0.252.0/24
#    Description: "CidrBlock for AZ B TGW subnet B within the VPC"

  InstanceType:
    Type: String
    Default: t3.micro
    #Default: "m5.large"
    Description: EC2 Instance Type for the VPC.

################################
# Create-Keypair : EC2 Keypair #
################################

  KeyPair:
    Description: "Keypair to access the EC2 Instance"
    Type: "AWS::EC2::KeyPair::KeyName"
    Default: "builders20210312"

##########################
# Create-AMI: EC2 AMI ID #
##########################

  LatestAmiId:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"

###############################
# Create-Resource: Resource   #
###############################

Resources:

#####################
# Create-VPC : VPC #
#####################

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDRBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}'
        - Key: project
          Value: !Sub '${AWS::StackName}'

###########################################
# Create-IGW: Create VPC InternetGateway #
###########################################

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-IGW'

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

#############################################
# Create-NATGW: Create VPC NATGateway #
#############################################
  NatGatewayAEIP:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-NATGW-A-EIP'

#  NatGatewayBEIP:
#    DependsOn:
#    - VPCGatewayAttachment
#    Type: 'AWS::EC2::EIP'
#    Properties:
#      Domain: vpc
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-NATGW-B-EIP'


  NatGatewayA:
    DependsOn:
    - NatGatewayAEIP
    - PublicSubnetA
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayAEIP.AllocationId'
      SubnetId: !Ref PublicSubnetA
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-NATGW-A'

#  NatGatewayB:
#    DependsOn:
#    - NatGatewayBEIP
#    - PublicSubnetB
#    - VPCGatewayAttachment
#    Type: AWS::EC2::NatGateway
#    Properties:
#      AllocationId: !GetAtt 'NatGatewayBEIP.AllocationId'
#      SubnetId: !Ref PublicSubnetB
#      Tags:
#      - Key: Name
#        Value: !Sub '${AWS::StackName}-NATGW-B'

 
####################################################
# Create-Public-Subnet: VPC Public_Subnet_a,b,c,d #
####################################################

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnetABlock
      AvailabilityZone: !Ref AvailabilityZoneA
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicSubnetA'

#  PublicSubnetB:
#    Type: AWS::EC2::Subnet
#    Properties:
#      VpcId: !Ref VPC
#      CidrBlock: !Ref PublicSubnetBBlock
#      AvailabilityZone: !Ref AvailabilityZoneB
#      MapPublicIpOnLaunch: true
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-PublicSubnetB'


################################################
# Create-RouteTable: VPCPublic Route Table    #
################################################

  PublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicRT'

  PublicRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

######################################################################################################
# Associate-Publice-RouteTable: VPC Public Subnet a,b,c,d Accsociate VPC Public Subnet Route Table #
######################################################################################################
  PublicSubnetRouteTableAAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicSubnetRouteTable

#  PublicSubnetRouteTableBAssociation:
#    Type: AWS::EC2::SubnetRouteTableAssociation
#    Properties:
#      SubnetId: !Ref PublicSubnetB
#      RouteTableId: !Ref PublicSubnetRouteTable


#############################################################
# Create-Private-Subnet: Create VPC Private_Subnet_a,b,c,d #
#############################################################

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnetABlock
      AvailabilityZone: !Ref AvailabilityZoneA
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PrivateSubnetA'

#  PrivateSubnetB:
#    Type: AWS::EC2::Subnet
#    Properties:
#      VpcId: !Ref VPC
#      CidrBlock: !Ref PrivateSubnetBBlock
#      AvailabilityZone: !Ref AvailabilityZoneB
#      MapPublicIpOnLaunch: false
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-PrivateSubnetB'


#####################################################################
# Create-Private-RouteTable: Create VPC_Private_RouteTable_a,b,c,d #
#####################################################################
  PrivateSubnetARouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Private-Subnet-A-RT'

#  PrivateSubnetBRouteTable:
#    Type: AWS::EC2::RouteTable
#    Properties:
#      VpcId: !Ref VPC
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-Private-Subnet-B-RT'

  PrivateSubnetARoute:
    DependsOn:
    - VPCGatewayAttachment
    - NatGatewayA
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateSubnetARouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA

#  PrivateSubnetBRoute:
#    DependsOn:
#    - VPCGatewayAttachment
#    - NatGatewayB
#    Type: AWS::EC2::Route
#    Properties:
#      RouteTableId: !Ref PrivateSubnetBRouteTable
#      DestinationCidrBlock: 0.0.0.0/0
#      NatGatewayId: !Ref NatGatewayB


################################################################################################
# Associate-Private-RouteTable: VPC_Private_Subnet_a,b,c,d Accsociate VPC_Private_RouteTable #
################################################################################################
  PrivateSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA   
      RouteTableId: !Ref PrivateSubnetARouteTable

#  PrivateSubnetBRouteTableAssociation:
#    Type: AWS::EC2::SubnetRouteTableAssociation
#    Properties:
#      SubnetId: !Ref PrivateSubnetB
#      RouteTableId: !Ref PrivateSubnetBRouteTable


#############################################################
# Create-TGW-Subnet: Create VPC TGW_Subnet_a,b,c,d #
#############################################################

  TGWSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref TGWSubnetABlock
      AvailabilityZone: !Ref AvailabilityZoneA
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-TGWSubnetA'

#  TGWSubnetB:
#    Type: AWS::EC2::Subnet
#    Properties:
#      VpcId: !Ref VPC
#      CidrBlock: !Ref TGWSubnetBBlock
#      AvailabilityZone: !Ref AvailabilityZoneB
#      MapPublicIpOnLaunch: false
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-TGWSubnetB'

#####################################################################
# Create-TGW-RouteTable: Create VPC_TGW_RouteTable_a,b,c,d #
#####################################################################
  TGWSubnetARouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-TGW-Subnet-A-RT'

#  TGWSubnetBRouteTable:
#    Type: AWS::EC2::RouteTable
#    Properties:
#      VpcId: !Ref VPC
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-TGW-Subnet-B-RT'

 
  TGWSubnetARoute:
    DependsOn:
    - VPCGatewayAttachment
    - NatGatewayA
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref TGWSubnetARouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA

#  TGWSubnetBRoute:
#    DependsOn:
#    - VPCGatewayAttachment
#    - NatGatewayB
#    Type: AWS::EC2::Route
#    Properties:
#      RouteTableId: !Ref TGWSubnetBRouteTable
#      DestinationCidrBlock: 0.0.0.0/0
#      NatGatewayId: !Ref NatGatewayB
      
      
################################################################################################
# Associate-TGW-RouteTable: VPC_TGW_Subnet_a,b,c,d Accsociate VPC_TGW_RouteTable #
################################################################################################
  TGWSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref TGWSubnetA   
      RouteTableId: !Ref TGWSubnetARouteTable

#  TGWSubnetBRouteTableAssociation:
#    Type: AWS::EC2::SubnetRouteTableAssociation
#    Properties:
#      SubnetId: !Ref TGWSubnetB
#      RouteTableId: !Ref TGWSubnetBRouteTable

 
######################################
# Create-SSM: Create VPC ServerRole #
######################################

  ServerRoleSSM:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub '${AWS::StackName}-SSMRole'
      Path: "/"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole

  InstanceProfileSSM:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles: 
        - Ref: ServerRoleSSM
        
###############################################################################
# Create-Security-Group: VPC Security Group - HTTP, HTTPS, ICMP , SSH Permit #
###############################################################################

  PublicEC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open-up ports for ICMP and SSH,HTTP/S from All network
      GroupName:  PublicEC2SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          CidrIp: 0.0.0.0/0
          FromPort: "-1"
          ToPort: "-1"
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "22"
          ToPort: "22"
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "80"
          ToPort: "80"
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "443"
          ToPort: "443"
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicSG'

  PrivateEC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open-up ports for ICMP and SSH,HTTP/S from All network
      GroupName: PrivateEC2SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          CidrIp: 0.0.0.0/0
          FromPort: "-1"
          ToPort: "-1"
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "22"
          ToPort: "22"
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "80"
          ToPort: "80"
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "443"
          ToPort: "443"
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PrivateSG'

  SSMSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open-up ports for HTTP/S from All network
      GroupName: SSMSG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "80"
          ToPort: "80"
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "443"
          ToPort: "443"
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SSMSG'

######################################
# Create-EC2: VPC Public EC2 Create #
######################################

  PublicAInstance1:
    Type: AWS::EC2::Instance
    DependsOn: PublicSubnetA
    Properties:
      SubnetId: !Ref PublicSubnetA
      ImageId: !Ref LatestAmiId
      PrivateIpAddress: 10.0.11.101
      InstanceType: !Ref InstanceType
      SecurityGroupIds: 
        - Ref: PublicEC2SG
      KeyName: !Ref KeyPair
      IamInstanceProfile: !Ref InstanceProfileSSM
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Public-10.0.11.101'
      UserData:
        Fn::Base64:
          Fn::Sub: |
            #!/bin/bash
            sudo yum -y update
            sudo yum -y install yum-utils 
            sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
            sudo yum -y install iotop iperf3 iptraf tcpdump git bash-completion 
            sudo yum -y install httpd php mysql php-mysql 
            sudo yum -y install python-pip
            sudo yum -y install nethogs iftop lnav nmon tmux wireshark vsftpd ftp
            sudo systemctl start httpd
            sudo systemctl enable httpd
            cd /var/www/html/
            sudo git clone https://github.com/whchoi98/ec2meta-webpage.git
            sudo systemctl restart httpd
            sudo echo 10.0.21.101 SEOUL-VPC-HQ-Private >> /etc/hosts 
            sudo echo 10.1.21.101 SEOUL-VPC-PRD-Private >> /etc/hosts
            sudo echo 10.2.21.101 SEOUL-VPC-STG-Private >> /etc/hosts
            sudo echo 10.3.21.101 SEOUL-VPC-DEV-Private >> /etc/hosts
            sudo echo 10.4.21.101 SEOUL-VPC-PRT-Private >> /etc/hosts
            sudo echo 10.5.21.101 IAD-VPC-Private >> /etc/hosts
            exit       

#  PublicAInstance2:
#    Type: AWS::EC2::Instance
#    DependsOn: PublicSubnetA
#    Properties:
#      SubnetId: !Ref PublicSubnetA
#      ImageId: !Ref LatestAmiId
#      PrivateIpAddress: 10.0.11.102
#      InstanceType: !Ref InstanceType
#      SecurityGroupIds: 
#        - Ref: PublicEC2SG
#      KeyName: !Ref KeyPair
#      IamInstanceProfile: !Ref InstanceProfileSSM
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-Public-10.0.11.102'
#      UserData:
#        Fn::Base64:
#          Fn::Sub: |
#            #!/bin/bash
#            sudo yum -y update
#            sudo yum -y install yum-utils 
#            sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
#            sudo yum -y install iotop iperf3 iptraf tcpdump git bash-completion 
#            sudo yum -y install httpd php mysql php-mysql 
#            sudo yum -y install python-pip
#            sudo yum -y install nethogs iftop lnav nmon tmux wireshark vsftpd ftp
#            sudo systemctl start httpd
#            sudo systemctl enable httpd
#            cd /var/www/html/
#            sudo git clone https://github.com/whchoi98/ec2meta-webpage.git
#            sudo systemctl restart httpd
#            sudo echo 10.0.21.101 SEOUL-VPC-HQ-Private >> /etc/hosts 
#            sudo echo 10.1.21.101 SEOUL-VPC-PRD-Private >> /etc/hosts
#            sudo echo 10.2.21.101 SEOUL-VPC-STG-Private >> /etc/hosts
#            sudo echo 10.3.21.101 SEOUL-VPC-DEV-Private >> /etc/hosts
#            sudo echo 10.4.21.101 SEOUL-VPC-PRT-Private >> /etc/hosts
#            sudo echo 10.5.21.101 IAD-VPC-Private >> /etc/hosts
#            exit    

#  PublicBInstance1:
#    Type: AWS::EC2::Instance
#    DependsOn: PublicSubnetB
#    Properties:
#      SubnetId: !Ref PublicSubnetB
#      ImageId: !Ref LatestAmiId
#      PrivateIpAddress: 10.0.12.101
#      InstanceType: !Ref InstanceType
#      SecurityGroupIds: 
#        - Ref: PublicEC2SG
#      KeyName: !Ref KeyPair
#      IamInstanceProfile: !Ref InstanceProfileSSM
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-Public-10.0.12.101'
#      UserData:
#        Fn::Base64:
#          Fn::Sub: |
#            #!/bin/bash
#            sudo yum -y update
#            sudo yum -y install yum-utils 
#            sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
#            sudo yum -y install iotop iperf3 iptraf tcpdump git bash-completion 
#            sudo yum -y install httpd php mysql php-mysql 
#            sudo yum -y install python-pip
#            sudo yum -y install nethogs iftop lnav nmon tmux wireshark vsftpd ftp
#            sudo systemctl start httpd
#            sudo systemctl enable httpd
#            cd /var/www/html/
#            sudo git clone https://github.com/whchoi98/ec2meta-webpage.git
#            sudo systemctl restart httpd
#            sudo echo 10.0.21.101 SEOUL-VPC-HQ-Private >> /etc/hosts 
#            sudo echo 10.1.21.101 SEOUL-VPC-PRD-Private >> /etc/hosts
#            sudo echo 10.2.21.101 SEOUL-VPC-STG-Private >> /etc/hosts
#            sudo echo 10.3.21.101 SEOUL-VPC-DEV-Private >> /etc/hosts
#            sudo echo 10.4.21.101 SEOUL-VPC-PRT-Private >> /etc/hosts
#            sudo echo 10.5.21.101 IAD-VPC-Private >> /etc/hosts
#            exit 
#
#  PublicBInstance2:
#    Type: AWS::EC2::Instance
#    DependsOn: PublicSubnetB
#    Properties:
#      SubnetId: !Ref PublicSubnetB
#      ImageId: !Ref LatestAmiId
#      PrivateIpAddress: 10.0.12.102
#      InstanceType: !Ref InstanceType
#      SecurityGroupIds: 
#        - Ref: PublicEC2SG
#      KeyName: !Ref KeyPair
#      IamInstanceProfile: !Ref InstanceProfileSSM
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-Public-10.0.12.102'
#      UserData:
#        Fn::Base64:
#          Fn::Sub: |
#            #!/bin/bash
#            sudo yum -y update
#            sudo yum -y install yum-utils 
#            sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
#            sudo yum -y install iotop iperf3 iptraf tcpdump git bash-completion 
#            sudo yum -y install httpd php mysql php-mysql 
#            sudo yum -y install python-pip
#            sudo yum -y install nethogs iftop lnav nmon tmux wireshark vsftpd ftp
#            sudo systemctl start httpd
#            sudo systemctl enable httpd
#            cd /var/www/html/
#            sudo git clone https://github.com/whchoi98/ec2meta-webpage.git
#            sudo systemctl restart httpd
#            sudo echo 10.0.21.101 SEOUL-VPC-HQ-Private >> /etc/hosts 
#            sudo echo 10.1.21.101 SEOUL-VPC-PRD-Private >> /etc/hosts
#            sudo echo 10.2.21.101 SEOUL-VPC-STG-Private >> /etc/hosts
#            sudo echo 10.3.21.101 SEOUL-VPC-DEV-Private >> /etc/hosts
#            sudo echo 10.4.21.101 SEOUL-VPC-PRT-Private >> /etc/hosts
#            sudo echo 10.5.21.101 IAD-VPC-Private >> /etc/hosts
#            exit 


##############################################
# Create-Private-EC2: VPC Private EC2 Create #
##############################################

  PrivateAInstanace1:
    Type: AWS::EC2::Instance
    DependsOn: PrivateSubnetA
    Properties:
      SubnetId: !Ref PrivateSubnetA
      ImageId: !Ref LatestAmiId
      PrivateIpAddress: 10.0.21.101
      InstanceType: !Ref InstanceType
      SecurityGroupIds: 
        - Ref: PrivateEC2SG
      KeyName: !Ref KeyPair
      IamInstanceProfile: !Ref InstanceProfileSSM
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Private-10.0.21.101'
      UserData:
        Fn::Base64:
          Fn::Sub: |
            #!/bin/bash
            sudo yum -y update
            sudo yum -y install yum-utils 
            sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
            sudo yum -y install iotop iperf3 iptraf tcpdump git bash-completion 
            sudo yum -y install httpd php mysql php-mysql 
            sudo yum -y install python-pip
            sudo yum -y install nethogs iftop lnav nmon tmux wireshark vsftpd ftp
            sudo systemctl start httpd
            sudo systemctl enable httpd
            cd /var/www/html/
            sudo git clone https://github.com/whchoi98/ec2meta-webpage.git
            sudo systemctl restart httpd
            sudo echo 10.0.21.101 SEOUL-VPC-HQ-Private >> /etc/hosts 
            sudo echo 10.1.21.101 SEOUL-VPC-PRD-Private >> /etc/hosts
            sudo echo 10.2.21.101 SEOUL-VPC-STG-Private >> /etc/hosts
            sudo echo 10.3.21.101 SEOUL-VPC-DEV-Private >> /etc/hosts
            sudo echo 10.4.21.101 SEOUL-VPC-PRT-Private >> /etc/hosts
            sudo echo 10.5.21.101 IAD-VPC-Private >> /etc/hosts
            exit      

#  PrivateAInstance2:
#    Type: AWS::EC2::Instance
#    DependsOn: PrivateSubnetA
#    Properties:
#      SubnetId: !Ref PrivateSubnetA
#      ImageId: !Ref LatestAmiId
#      PrivateIpAddress: 10.0.21.102
#      InstanceType: !Ref InstanceType
#      SecurityGroupIds: 
#        - Ref: PrivateEC2SG
#      KeyName: !Ref KeyPair
#      IamInstanceProfile: !Ref InstanceProfileSSM
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-Private-10.0.21.102'
#      UserData:
#        Fn::Base64:
#          Fn::Sub: |
#            #!/bin/bash
#            sudo yum -y update
#            sudo yum -y install yum-utils 
#            sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
#            sudo yum -y install iotop iperf3 iptraf tcpdump git bash-completion 
#            sudo yum -y install httpd php mysql php-mysql 
#            sudo yum -y install python-pip
#            sudo yum -y install nethogs iftop lnav nmon tmux wireshark vsftpd ftp
#            sudo systemctl start httpd
#            sudo systemctl enable httpd
#            cd /var/www/html/
#            sudo git clone https://github.com/whchoi98/ec2meta-webpage.git
#            sudo systemctl restart httpd
#            sudo echo 10.0.21.101 SEOUL-VPC-HQ-Private >> /etc/hosts 
#            sudo echo 10.1.21.101 SEOUL-VPC-PRD-Private >> /etc/hosts
#            sudo echo 10.2.21.101 SEOUL-VPC-STG-Private >> /etc/hosts
#            sudo echo 10.3.21.101 SEOUL-VPC-DEV-Private >> /etc/hosts
#            sudo echo 10.4.21.101 SEOUL-VPC-PRT-Private >> /etc/hosts
#            sudo echo 10.5.21.101 IAD-VPC-Private >> /etc/hosts
#            exit     

#  PrivateBInstance1:
#    Type: AWS::EC2::Instance
#    DependsOn: PrivateSubnetB
#    Properties:
#      SubnetId: !Ref PrivateSubnetB
#      ImageId: !Ref LatestAmiId
#      PrivateIpAddress: 10.0.22.101
#      InstanceType: !Ref InstanceType
#      SecurityGroupIds: 
#        - Ref: PrivateEC2SG
#      KeyName: !Ref KeyPair
#      IamInstanceProfile: !Ref InstanceProfileSSM
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-Private-10.0.22.101'
#      UserData:
#        Fn::Base64:
#          Fn::Sub: |
#            #!/bin/bash
#            sudo yum -y update
#            sudo yum -y install yum-utils 
#            sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
#            sudo yum -y install iotop iperf3 iptraf tcpdump git bash-completion 
#            sudo yum -y install httpd php mysql php-mysql 
#            sudo yum -y install python-pip
#            sudo yum -y install nethogs iftop lnav nmon tmux wireshark vsftpd ftp
#            sudo systemctl start httpd
#            sudo systemctl enable httpd
#            cd /var/www/html/
#            sudo git clone https://github.com/whchoi98/ec2meta-webpage.git
#            sudo systemctl restart httpd
#            exit
#
#  PrivateBInstance2:
#    Type: AWS::EC2::Instance
#    DependsOn: PrivateSubnetB
#    Properties:
#      SubnetId: !Ref PrivateSubnetB
#      ImageId: !Ref LatestAmiId
#      PrivateIpAddress: 10.0.22.102
#      InstanceType: !Ref InstanceType
#      SecurityGroupIds: 
#        - Ref: PrivateEC2SG
#      KeyName: !Ref KeyPair
#      IamInstanceProfile: !Ref InstanceProfileSSM
#      Tags:
#        - Key: Name
#          Value: !Sub '${AWS::StackName}-Private-10.0.22.102'
#      UserData:
#        Fn::Base64:
#          Fn::Sub: |
#            #!/bin/bash
#            sudo yum -y update
#            sudo yum -y install yum-utils 
#            sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
#            sudo yum -y install iotop iperf3 iptraf tcpdump git bash-completion 
#            sudo yum -y install httpd php mysql php-mysql 
#            sudo yum -y install python-pip
#            sudo yum -y install nethogs iftop lnav nmon tmux wireshark vsftpd ftp
#            sudo systemctl start httpd
#            sudo systemctl enable httpd
#            cd /var/www/html/
#            sudo git clone https://github.com/whchoi98/ec2meta-webpage.git
#            sudo systemctl restart httpd
#            exit


######################################################################
# Create-System-Manager-Endpoint: Create VPC SystemManager Endpoint #
######################################################################

  SSMEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref VPC
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.ssm"
      VpcEndpointType: Interface
      PrivateDnsEnabled: True
      SubnetIds: 
        - Ref: PrivateSubnetA
#        - Ref: PrivateSubnetB
      SecurityGroupIds:
        - Ref: SSMSG

  SSMMEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref VPC
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.ssmmessages"
      VpcEndpointType: Interface
      PrivateDnsEnabled: True
      SubnetIds: 
        - Ref: PrivateSubnetA
#        - Ref: PrivateSubnetB
      SecurityGroupIds:
        - Ref: SSMSG

###############
# VPC Outputs #
###############
Outputs:
  VPC:
    Description: VPC
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}"

  TGWSubnetA:
    Description: TGWSubnetA
    Value: !Ref TGWSubnetA
    Export:
      Name: !Sub "${AWS::StackName}-TGWSubnetA"

#  TGWSubnetB:
#    Description: TGWSubnetB
#    Value: !Ref TGWSubnetB
#    Export:
#      Name: !Sub "${AWS::StackName}-TGWSubnetB"

  PublicSubnetA:
    Description: PublicSubnetA
    Value: !Ref PublicSubnetA
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnetA"

#  PublicSubnetBBlock:
#    Description: PublicSubnetB
#    Value: !Ref PublicSubnetB
#    Export:
#      Name: !Sub "${AWS::StackName}-PublicSubnetB"

  PrivateSubnetABlock:
    Description: PrivateSubnetA
    Value: !Ref PrivateSubnetA
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnetA"

#  PrivateSubnetBBlock:
#    Description: PrivateSubnetB
#    Value: !Ref PrivateSubnetB
#    Export:
#      Name: !Sub "${AWS::StackName}-PrivateSubnetB"
